@@ -35,9 +35,11 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 CSharedMem::CSharedMem()  
 {
+	// Set internal variables to their default state
     m_uSize = 0;
     m_hFileMapping = NULL;  
 
+	// Determine memory granularity (needed for file mapping).
     SYSTEM_INFO si;  
     GetSystemInfo(&si);
     m_dwAllocGranularity = si.dwAllocationGranularity;  
@@ -45,15 +47,18 @@ CSharedMem::CSharedMem()
 
 CSharedMem::~CSharedMem()
 {
+	// Clean up
     Destroy();
 }
 
 
 BOOL CSharedMem::Init(LPCTSTR szName, BOOL bOpenExisting, ULONG64 uSize)
 {
+	// If already initialised, do nothing
     if(m_hFileMapping!=NULL)
         return FALSE;
 
+	// Either open existing file mapping or create new one
     if(!bOpenExisting)
     {	
         ULARGE_INTEGER i;
@@ -65,20 +70,25 @@ BOOL CSharedMem::Init(LPCTSTR szName, BOOL bOpenExisting, ULONG64 uSize)
         m_hFileMapping = OpenFileMapping(FILE_MAP_READ|FILE_MAP_WRITE, FALSE, szName);
     }
 
+	// Save name and size of the file mapping
     m_sName = szName;
     m_uSize = uSize; 
 
+	// Check file mapping is valid
     if(m_hFileMapping==NULL)
     {
+		// Failure
         m_uSize = 0;  
         return FALSE;
     }
 
+	// Done
     return TRUE;
 }
 
 BOOL CSharedMem::Destroy()
 {
+	// Release all views of the file mapping
     std::map<LPBYTE, LPBYTE>::iterator it;
     for(it=m_aViewStartPtrs.begin(); it!=m_aViewStartPtrs.end(); it++)
     {
@@ -86,6 +96,7 @@ BOOL CSharedMem::Destroy()
     }
     m_aViewStartPtrs.clear();
 
+	// Destroy file mapping
     if(m_hFileMapping!=NULL)
     {
         CloseHandle(m_hFileMapping);    
@@ -99,16 +110,20 @@ BOOL CSharedMem::Destroy()
 
 CString CSharedMem::GetName()
 {
+	// Return file mapping name
     return m_sName;
 }
 
 ULONG64 CSharedMem::GetSize()
 {
+	// Return file mapping size
     return m_uSize;
 }
 
 LPBYTE CSharedMem::CreateView(DWORD dwOffset, DWORD dwLength)
 {
+	// Create view with specified offset from the beginning of the file mapping
+	// and return pointer to the view
     DWORD dwBaseOffs = dwOffset-dwOffset%m_dwAllocGranularity;
     DWORD dwDiff = dwOffset-dwBaseOffs;
     LPBYTE pPtr = NULL;
@@ -121,6 +136,7 @@ LPBYTE CSharedMem::CreateView(DWORD dwOffset, DWORD dwLength)
 
 void CSharedMem::DestroyView(LPBYTE pViewPtr)
 {
+	// Release the view having specified starting pointer
     std::map<LPBYTE, LPBYTE>::iterator it = m_aViewStartPtrs.find(pViewPtr);
     if(it!=m_aViewStartPtrs.end())
     {
@@ -128,3 +144,5 @@ void CSharedMem::DestroyView(LPBYTE pViewPtr)
         m_aViewStartPtrs.erase(it);
     }
 }
+
+
